<resources>
    <string name="app_name">Jarvis</string>
    <string name="server_client_id">
        282394539630-06ith7hfdo2cqeok6g487s0slqh7ah8c.apps.googleusercontent.com
    </string>
    <!--    <string name="project_id">-->
    <!--        jarvis-cpen321-->
    <!--    </string>-->

    <string name="auth_uri">
        https://accounts.google.com/o/oauth2/auth
    </string>

    <string name="token_uri">
        https://oauth2.googleapis.com/token
    </string>

    <string name="auth_provider_x509_cert_url">
        https://www.googleapis.com/oauth2/v1/certs
    </string>

    <string name="Title">
        Notification
    </string>
    <string name="Content">
        New Notification
    </string>

    <string name="channel_name">
        Jarvis
    </string>
    <string name="channel_description">
        channel_description
    </string>

    <string name="google_maps_API_key">
        AIzaSyC567xrC3YAWcUNwgc1YcpFYRw3UtkMZxo
    </string>

    <string name="search_hint">
        Friend email
    </string>

    <string name="app_label">
        Friend Search Feature
    </string>

    <string name="search_view">
        Enter Search
    </string>

    <string name="CREATEVENT_TOAST">
        Event Successfully Created
    </string>

    <string-array name="test">
        <item>test1</item>
        <item>test2</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
