<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Popup">

    <TextView
        android:id="@+id/tvDate_Pop_st"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Date..."
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@id/tvTime_Pop_st"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/choosedate_pop_bttn_st"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/choosedate_pop_bttn_st"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvDate_Pop_st"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/choosetime_pop_bttn_st"
        android:layout_toEndOf="@+id/tvDate_Pop_st"
        android:text="Choose" />

    <TextView
        android:id="@+id/tvTime_Pop_st"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDate_Pop_st"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/choosetime_pop_bttn_st"
        app:layout_constraintBottom_toTopOf="@id/tvDate_pop_end"
        android:text="Start Time..."
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24dp" />

    <Button
        android:id="@+id/choosetime_pop_bttn_st"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/choosedate_pop_bttn_st"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvTime_Pop_st"
        app:layout_constraintBottom_toTopOf="@id/enddate_bttn"
        android:layout_toEndOf="@+id/tvTime_Pop_st"
        android:text="Choose" />

    <TextView
        android:id="@+id/tvDate_pop_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTime_Pop_st"
        app:layout_constraintRight_toLeftOf="@id/enddate_bttn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTime_pop_end"
        android:text="End Date..."
        android:textColor="@color/colorPrimary"
        android:textSize="24dp"/>

    <TextView
        android:id="@+id/tvTime_pop_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/endtime_bttn"
        app:layout_constraintTop_toBottomOf="@id/tvDate_pop_end"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="End Time..."
        android:textColor="@color/colorPrimary"
        android:textSize="24dp"/>

    <Button
        android:id="@+id/enddate_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/choosetime_pop_bttn_st"
        app:layout_constraintBottom_toTopOf="@id/endtime_bttn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvDate_pop_end"
        android:layout_toEndOf="@+id/tvDate_pop_end"
        android:text="Choose" />

    <Button
        android:id="@+id/endtime_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enddate_bttn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvTime_pop_end"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_toEndOf="@+id/tvTime_pop_end"
        android:text="Choose" />

</androidx.constraintlayout.widget.ConstraintLayout>