<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <Button
        android:id="@+id/create_event_bttn"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:background="@color/colorPrimaryLight"
        android:text="Find a Time!"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/my_events_bttn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/my_events_bttn"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:background="@color/colorPrimaryLight"
        android:text="My Events"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_event_bttn"
        app:layout_constraintBottom_toTopOf="@id/invitations_bttn"/>

    <Button
        android:id="@+id/invitations_bttn"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:text="Invitations"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintTop_toBottomOf="@id/my_events_bttn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>