<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="Add"
        android:id="@+id/add_pt_bttn"
        app:showAsAction="always"
        android:icon="@mipmap/send_button_new">
    </item>

    <item
        android:title="Finish"
        app:showAsAction="always"
        android:id="@+id/finish_pt_bttn">
    </item>

</menu>